--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,6 +19,13 @@
 
 <div class="new-book">
 <h2>New book</h2>
+<% if @book.errors.any? %>
+<ul>
+  <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+  <% end %>
+</ul>
+<% end %>
 
 <%= form_with model:@book, local: true do |f| %>
 
