[Update]バリデーション

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,12 @@
 <h1>Editing Book</h1>
+<% if @book.errors.any? %>
+<%= @book.errors.count %>件のエラーがあります。
+<ul>
+<% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+<% end %>
+</ul>
+<% end %>
 
 <%= form_with model:@book, local: true do |f| %>
 
