--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,6 +20,7 @@
 <div class="new-book">
 <h2>New book</h2>
 <% if @book.errors.any? %>
+<%= @book.errors.count %>件のエラーがあります。
 <ul>
   <% @book.errors.full_messages.each do |message| %>
     <li><%= message %></li>
